force-app/main/default/objects/Account/fields/Address_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Address_Longitude__c</fullName>
    <formula>IF(ISBLANK(BillingLongitude), ShippingLongitude, BillingLongitude)</formula>
    <label>Address Longitude</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>