force-app/main/default/objects/Account/fields/Missing_Country__c.field-meta.xml
<CustomField>
    <fullName>Missing_Country__c</fullName>
    <formula>IF(Country_Code__c &lt;> NULL, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Missing Country</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>