force-app/main/default/objects/Account/fields/Missing_Geocode__c.field-meta.xml
<CustomField>
    <fullName>Missing_Geocode__c</fullName>
    <formula>IF( BLANKVALUE(Address_Latitude__c, 0) &lt;> 0,  IF( BLANKVALUE(Address_Longitude__c, 0) &lt;> 0, 1, 0) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Missing Geocode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>