force-app/main/default/objects/Account/fields/Missing_State__c.field-meta.xml
<CustomField>
    <fullName>Missing_State__c</fullName>
    <formula>IF( Country_Code__c = 'USA',  IF( State__c &lt;> NULL, 1, 0) , 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Missing State</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>