force-app/main/default/objects/Account/fields/Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Sentiment__c</fullName>
    <label>Sentiment</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>