force-app/main/default/objects/Account/fields/Sentiment_Label__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Label__c</fullName>
    <label>Sentiment_Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>