force-app/main/default/objects/Account/fields/Subregion1__c.field-meta.xml
<CustomField>
    <fullName>Subregion1__c</fullName>
    <label>Subregion1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>