force-app/main/default/objects/Account/fields/Subregion2__c.field-meta.xml
<CustomField>
    <fullName>Subregion2__c</fullName>
    <label>Subregion2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>